--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   "author": "Thanyathorn Thanapattheerakul",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fast-csv": "^4.0.2",
     "fs": "0.0.1-security",
-    "mysql": "^2.18.0"
+    "moment": "^2.24.0",
+    "mysql": "^2.18.0",
+    "pg": "^7.17.1",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
+    "make-runnable": "^1.3.6",
     "nodemon": "^2.0.2"
   }
 }
