--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "start-dev": "nodemon server.js"
   },
   "author": "Thanyathorn Thanapattheerakul",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "csv-parser": "^2.3.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "fast-csv": "^4.0.2",
     "fs": "0.0.1-security",
     "moment": "^2.24.0",
-    "mysql": "^2.18.0",
     "pg": "^7.17.1",
     "uuid": "^3.4.0"
   },
